--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h2>Hi, I am Revanth.</h2>
+    <h4>Thanks for checking in.</h4>
     <h4>Homepage loading soon.!</h4>
   </body>
 </html>
