--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Revanth - Data Engineer | AWS | DevOps</title>
+    <title>Revanth - Portfolio</title>
     <style>
         * {
             margin: 0;
@@ -412,7 +412,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Hi, I'm Revanth</h1>
-            <p class="subtitle">Data Engineer | Cloud Architect | DevOps Specialist</p>
+            <p class="subtitle">Data | Cloud | DevOps </p>
             <div class="tags">
                 <span class="tag">AWS Certified</span>
                 <span class="tag">Data Pipeline Expert</span>
@@ -634,13 +634,13 @@
                 I'm always interested in discussing data engineering challenges and opportunities.
             </p>
             <div class="contact-links">
-                <a href="mailto:your-email@example.com" class="contact-link">
+                <a href="mailto:eswarrevanth@gmail.com" class="contact-link">
                     <span>📧</span> Email
                 </a>
-                <a href="https://linkedin.com/in/your-profile" class="contact-link">
+                <a href="https://www.linkedin.com/in/revanthch14/" class="contact-link">
                     <span>💼</span> LinkedIn
                 </a>
-                <a href="https://github.com/your-username" class="contact-link">
+                <a href="https://github.com/revanth14" class="contact-link">
                     <span>🐙</span> GitHub
                 </a>
             </div>
