resume download option

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             </div>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
+                <a href="resume/Revanth_Resume.pdf" class="btn btn-resume" download="Revanth_CloudDataEngineer_Resume.pdf">
+                    📄 Download Resume
+                </a>
                 <a href="#contact" class="btn btn-secondary">Get In Touch</a>
             </div>
         </div>
