--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Website Status Indicator -->
+    <div class="status-indicator" id="statusIndicator">
+        <span class="status-dot"></span>
+        <span id="statusText">Updated Dec 2024</span>
+        <div class="status-tooltip">
+            <div class="update-item">
+                <div class="update-date">Dec 20, 2024</div>
+                <div>✨ Added certification modal & status indicator</div>
+            </div>
+            <div class="update-item">
+                <div class="update-date">Dec 19, 2024</div>
+                <div>🎨 Separated CSS/JS files, added SEO tags</div>
+            </div>
+            <div class="update-item">
+                <div class="update-date">Dec 18, 2024</div>
+                <div>🚀 Initial portfolio launch with projects</div>
+            </div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
@@ -72,9 +92,6 @@
             </div>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">View My Work</a>
-                <a href="resume/Revanth_Resume.pdf" class="btn btn-resume" download="Revanth_CloudDataEngineer_Resume.pdf">
-                    📄 Download Resume
-                </a>
                 <a href="#contact" class="btn btn-secondary">Get In Touch</a>
             </div>
         </div>
