--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
     <nav>
         <div class="nav-container">
             <a href="#home" class="logo">Revanth.io</a>
-            <ul class="nav-links">
+            
+            <!-- Mobile Menu Button -->
+            <button class="mobile-menu-btn" id="mobileMenuBtn">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            
+            <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
