--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
     
     <!-- External CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/chatbot.css">
+    <link rel="stylesheet" href="css/config.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -152,5 +154,7 @@
 
     <!-- External JavaScript -->
     <script src="js/script.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/chatbot.js"></script>
 </body>
 </html>
